# cmake_for_build_exec

./: CMakeLists.txt  CMakeLists_cross.cmake  README.md  cmake_example.cpp  version_def.h.in
lib1/: CMakeLists.txt  lib1.cpp  lib1.h
